# Eternal

./: .gitignore  README.md  build.gradle  build_android.sh  gradle.properties  settings.gradle  start.sh
demo/: .gitignore  build.gradle
demo/src/androidTest/java/me/juhezi/demo/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/cpp/: .gitignore  CMakeLists.txt  common  hello_triangle.c
demo/src/main/cpp/android/: GPUImageJNI.cpp  GPUImageMacros.h
demo/src/main/cpp/gpuimage/: GPUImageFilter.cpp  GPUImageFilter.hpp
demo/src/main/java/me/juhezi/demo/: AudioCodec.java  Constants.java  Contants.java  EternalGPUImageActivity.kt  GL2Activity.java  GLActivity.java  ImageActivity.java  IndexBuffer.kt  MainActivity.java  MainActivity.kt  ObjectBuilder.java  VertexArray.java  VertexBuffer.kt
demo/src/main/java/me/juhezi/demo/none/: GPUImageFilter.java
demo/src/main/java/me/juhezi/demo/objects/: Geometry.java  HeightMap.java  Mallet.java  ParticleShooter.java  ParticleSystem.java  Puck.java  SkyBox.java  Table.java
demo/src/main/java/me/juhezi/demo/programs/: ColorShaderProgram.java  HeightMapShaderProgram.kt  ParticleShaderProgram.java  ShaderProgram.java  SkyBoxShaderProgram.kt  (+1 more)
demo/src/main/res/layout/: activity_eternal_gpu_image.xml  activity_image.xml  activity_main.xml
demo/src/main/res/raw/: default_fragment_shader.glsl  default_vertex_shader.glsl  height_map_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  sky_box_fragment_shader.glsl  sky_box_vertex_shader.glsl
demo/src/test/java/me/juhezi/demo/: ExampleUnitTest.java
eternal/: build.gradle
eternal/extra/: intro.md
eternal/src/androidTest/java/me/juhezi/eternal/: ExampleInstrumentedTest.java
eternal/src/main/: AndroidManifest.xml
eternal/src/main/java/me/juhezi/eternal/: Config.kt  LoginActivity.kt
eternal/src/main/res/anim/: dialog_enter_anim.xml  dialog_exit_anim.xml
eternal/src/main/res/drawable/: ic_label_gray.xml  selector_operation_item.xml  shape_black_60_corner.xml  shape_gray_corner.xml
eternal/src/main/res/layout/: activity_root.xml  activity_single_fragment.xml  dialog_message.xml  dialog_operation.xml  dialog_progress.xml  item_icon_and_text_operation.xml  view_empty_default.xml  view_error_default.xml  view_eternal_toolbar.xml  view_loading_default.xml
eternal/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
eternal/src/test/java/me/juhezi/eternal/: ExampleUnitTest.java
generator/: mvp_generator.py  repo_generator.py
gradle/wrapper/: gradle-wrapper.properties
main/: build.gradle
main/extra/: intro.md
main/src/androidTest/java/me/juhezi/eternal/: ExampleInstrumentedTest.kt
main/src/androidTest/java/me/juhezi/main/: ExampleInstrumentedTest.kt
main/src/main/: AndroidManifest.xml
main/src/main/java/me/juhezi/main/: MainActivity.kt  MainApplication.kt
main/src/main/res/layout/: activity_main.xml
main/src/main/res/values/: strings.xml
main/src/test/java/me/juhezi/eternal/: ExampleUnitTest.kt
main/src/test/java/me/juhezi/main/: ExampleUnitTest.kt
notepad/: build.gradle
notepad/extra/: intro.md
notepad/src/androidTest/java/me/juhezi/notepad/: ExampleInstrumentedTest.kt
notepad/src/main/: AndroidManifest.xml
notepad/src/main/application/: AndroidManifest.xml
notepad/src/main/java/me/juhezi/notepad/: ExportService.kt  MainActivity.kt  NotepadApplication.java  NotepadMainActivity.kt
notepad/src/main/res/drawable/: notepad_ic_diary.xml  notepad_ic_write.xml
notepad/src/main/res/layout/: activity_main.xml  app_bar_base_drawer.xml  content_base_drawer.xml  fragment_add_article.xml  fragment_main.xml  item_article.xml  notepad_fragment_main.xml  notepad_fragment_view_article.xml  notepad_view_no_article.xml
notepad/src/main/res/values/: strings.xml
notepad/src/main/res/xml-v25/: shortcut.xml
notepad/src/test/java/me/juhezi/notepad/: ExampleUnitTest.kt
orange/: .gitignore  CMakeLists.txt  build.gradle
orange/src/main/: AndroidManifest.xml
orange/src/main/cpp/: ffmpeg_test.c  mp3_encoder.cpp  mp3_encoder.hpp
orange/src/main/cpp/common/: CMakeLists.txt  CommonTools.h
orange/src/main/cpp/ffmpeg_decoder/: accompany_decoder.cpp  accompany_decoder.hpp  accompany_decoder_controller.cpp  accompany_decoder_controller.hpp
orange/src/main/cpp/gl/: GPUImage.cpp  GPUImage.hpp  gpu_image.cpp  gpu_image.hpp
orange/src/main/cpp/media/: mp3_encoder.cpp  mp3_encoder.hpp  remuxer.cpp  remuxer.hpp
orange/src/main/cpp/util/: OpenGLUtil.cpp  open_gl_util.cpp  open_gl_util.hpp
orange/src/main/java/me/juhezi/orange/: FFmpegBridge.java  GPUImage.java  LameBridge.java
orange/src/main/jni/: GpuImageJNI.cpp  gpu_image_jni.cpp  orange.cpp
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
sdk/: build.gradle.kts
sdk/extra/: intro.md
sdk/src/main/: AndroidManifest.xml
time/: build.gradle
time/src/androidTest/java/me/juhezi/time/: ExampleInstrumentedTest.kt
time/src/main/application/: AndroidManifest.xml
time/src/main/java/me/juhezi/time/: MainActivity.kt  TimeActivity.kt
time/src/main/res/drawable/: ic_access_time.xml  ic_launcher_background.xml  ic_time.xml
time/src/main/res/layout/: activity_time.xml
time/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
time/src/main/res/values/: strings.xml
time/src/test/java/me/juhezi/time/: ExampleUnitTest.kt
(+107 files in other folders)
